--- a/BEDA/DataTableView.xib
+++ b/BEDA/DataTableView.xib
@@ -58,7 +58,7 @@
 										<int key="NSvFlags">256</int>
 										<string key="NSFrameSize">{318, 278}</string>
 										<reference key="NSSuperview" ref="783468265"/>
-										<reference key="NSNextKeyView" ref="419777586"/>
+										<reference key="NSNextKeyView" ref="325117008"/>
 										<string key="NSReuseIdentifierKey">_NS:13</string>
 										<bool key="NSEnabled">YES</bool>
 										<bool key="NSAllowsLogicalLayoutDirection">NO</bool>
@@ -242,7 +242,7 @@
 						</array>
 						<string key="NSFrame">{{80, -24}, {320, 296}}</string>
 						<reference key="NSSuperview" ref="1005"/>
-						<reference key="NSNextKeyView" ref="325117008"/>
+						<reference key="NSNextKeyView" ref="783468265"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<int key="NSsFlags">133682</int>
 						<reference key="NSVScroller" ref="419777586"/>
@@ -267,9 +267,9 @@
 					<object class="IBOutletConnection" key="connection">
 						<string key="label">view</string>
 						<reference key="source" ref="1001"/>
-						<reference key="destination" ref="858117553"/>
+						<reference key="destination" ref="1005"/>
 					</object>
-					<int key="connectionID">35</int>
+					<int key="connectionID">42</int>
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
@@ -497,7 +497,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">41</int>
+			<int key="maxID">42</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes"/>
 		<int key="IBDocument.localizationMode">0</int>
